# bytev5

./: CMakeLists.txt  CMakePresets.json  Config.cpp  Config.h  build_project.sh  bytev5.cpp  bytev5.h  wsl-toolchain.cmake
notDatabase/: DBInit.h  SqliteDatabase.h  database.h
proto/: newcoin.proto
shared/: Conversion.h  DeterministicKeys.cpp  ECIES.cpp  HttpsClient.cpp  HttpsClient.h  PackedMessage.h  ParseSection.cpp  ScopedLock.h  Serializer.cpp  Serializer.h  base58.h  bignum.h  key.h  rfc1751.cpp  uint256.h  utils.cpp  utils.h
src/: Application.h
src/ConnectionPool/: ConnectionPool.cpp  ConnectionPool.h  IConnectionPool.h
src/DatabaseCon/: DatabaseCon.cpp  DatabaseCon.h  IDatabaseCon.h
src/NewcoinAddress/: NewcoinAddress.cpp  NewcoinAddress.h
src/Peer/: IPeer.h  Peer.cpp  Peer.h
src/UniqueNodeList/: IUniqueNodeList.h  UniqueNodeList.cpp  UniqueNodeList.h  ValidatorSource.h
src/Wallet/: IWallet.h  Wallet.cpp  Wallet.h
